Fix widget in cell editor cutoff by the titlebar. (#94195)
* Fix widget in cell editor cutoff by the titlebar.

* Move zindex update internal to notebook

* remove unused css

* update zindex only closing notebook editor

* adopt fixed overflow widget option

* overflow visible is not needed for fixed element.

* optional transformOptimization

* remove unncessary position static and overflow visible

--- a/src/vs/workbench/contrib/notebook/browser/media/notebook.css
+++ b/src/vs/workbench/contrib/notebook/browser/media/notebook.css
@@ -17,9 +17,13 @@
 	white-space: initial;
 }
 
-/* .monaco-workbench .part.editor > .content .notebook-editor .cell-list-container .monaco-scrollable-element {
+/* .monaco-workbench .part.editor > .content .notebook-editor .cell-list-container > .monaco-list > .monaco-scrollable-element {
 	overflow: visible !important;
 } */
+
+.monaco-workbench .part.editor > .content .notebook-editor .cell-list-container .monaco-editor-hover {
+	z-index: 600 !important; /* @rebornix: larger than the editor title bar */
+}
 
 .monaco-workbench .part.editor > .content .notebook-editor .cell-list-container .monaco-list-rows {
 	min-height: 100%;
@@ -133,11 +137,6 @@
 	max-width: 100%;
 }
 
-
-.monaco-workbench .part.editor > .content .notebook-editor > .cell-list-container > .monaco-list > .monaco-scrollable-element > .monaco-list-rows > .monaco-list-row:focus-within {
-	z-index: 10;
-}
-
 .monaco-workbench .part.editor > .content .notebook-editor > .cell-list-container > .monaco-list > .monaco-scrollable-element > .monaco-list-rows > .monaco-list-row .menu {
 	position: absolute;
 	left: 0;
@@ -169,10 +168,10 @@
 .monaco-workbench .part.editor > .content .notebook-editor > .cell-list-container > .monaco-list > .monaco-scrollable-element > .monaco-list-rows > .monaco-list-row .menu:hover {
 	cursor: pointer;
 }
-
+/*
 .monaco-workbench .part.editor > .content .notebook-editor > .cell-list-container > .monaco-list > .monaco-scrollable-element > .monaco-list-rows {
 	margin-top: 16px;
-}
+} */
 
 .monaco-workbench .part.editor > .content .notebook-editor > .cell-list-container > .monaco-list > .monaco-scrollable-element > .monaco-list-rows > .monaco-list-row > .monaco-toolbar {
 	visibility: hidden;
